# iota

./: .clang-format  .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.md  configure  configure.ac  create.go  go.mod  main.go  todo.md  tspmo  vx-clutch  write.go
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
docs/: options  plan-to-modulize  plan-to-modulize.md
iota/: Makefile  Makefile.am  Makefile.in  aminit.c  aminit.h  arg_pass.c  arg_pass.h  build.c  build.h  config.h  config.h.in  config.h.in~  init.c  init.h  iota  main.c  options.c  options.h  parse_args.c  parse_args.h  stamp-h1
iota/.deps/: main.Po
iota/common/: base.c  base.h  bootstrap.c  bootstrap.h  templates.h  write.c  write.h
iota/common/.deps/: base.Po  bootstrap.Po  write.Po
iota/language.objects/: cc.lo  clang.lo  clang.lo.bak
iota/syslog/: README  colors.c  debug.c  error.c  error.h  fatal.c  log.c  note.c  warning.c
pkg/create/: create.go
pkg/errx/: errx.go
project.layouts/c/: CONTRIBUTORS
tools/: add-header  check-copyright-headers
